# MEPHI_CODEBASE

./: .gitignore  README.md  gitignore.gitignore
GRAD1/: 1.1c  11.c  12.c  2.1.c  2.4.c  2.6.c  2.7.c  3.c  4.c  5.c  5sm111.c  Untitled-1.c  (+4 more)
GRAD2/Lab2/: AbstractActionListener.h  AbstractIterator.h  ActionLIstener.h  ArraySequence.cpp  ArraySequence.h  BidirectionalIterator.h  CMakeLists.txt  DynamicArray  DynamicArray.cpp  DynamicArray.h  DynamicArraySequence.h  IConcatable.h  IConcatenable.h  ImmutableActionHandler.h  ImmutableDynamicArraySequence.h  ImmutableLinkedListSequense.h  ImmutableSequence.h  Iterable.h  LinkedList.h  LinkedListSequence.h  ListSequence.h  Makefile  MutableActionHandler.h  RandomAccessIterator.h  Sequence.h  a.out  cleandir.bash  listimplementation.h  main  main.cpp  program  readio.h  run.bash  test.cpp  tests.h
GRAD2/Lab2/my test/: ExtendedPairTypeA.h  ExtendedPairTypeB.h  IPair.h  MyPair.h  testmain  testmain.cpp
GRAD2/Lab2/my test/output/: testmain
GRAD2/Lab2/output/: al  main  test
GRAD2/Lab3/: ActionHandler.h  CMakeLists.txt  Complex.hpp  Deque.hpp  MWRAble.hpp  Queue.hpp  SegmentedDeque.hpp  Stack.hpp  Steque.hpp  Vector.hpp  main.cpp  test.cpp  test.h
GRAD2/Lab3/adapters/: AbstractAdapter.h  DequeAdapter.h  QueueAdapter.h  SegmentedDequeAdapter.h  StackAdapter.h
GRAD2/Lab3/entities/: Person.cpp  Person.h  Student.cpp  Student.h
GRAD2/Lab3/interface/: RunFunctionCommand.cpp  RunFunctionCommand.h  StartDialogCommand.cpp  StartDialogCommand.h  StartTestCommand.cpp  StartTestCommand.h
GRAD2/Lab3/output/: SegmentedDeque  main  test
GRAD3/Lab1/: Adapter.hpp  AdapterBase.h  CMakeLists.txt  IConcatable.hpp  LinkedList.hpp  LinkedListSequence.hpp  ListManager.hpp  Sequence.h  SharedPtr.hpp  UniquePtr.hpp  main.cpp  tests.cpp  tests.h
GRAD3/Lab1/output/: main
GRAD3/Lab1/smart_pointers/: SharedPtr.hpp  UniquePtr.hpp  WeakPtr.hpp  WeekPtr.hpp
GRAD3/Lab4/: CMakeLists.txt  main.cpp  test.cpp
GRAD3/Lab4/algorithms/: GraphColoring.hpp  IExecutable.hpp
GRAD3/Lab4/graph/: DirectedEdge.hpp  Edge.hpp  Graph.hpp  IHaveWeight.cpp  IHaveWeight.h  Vertex.hpp
GRAD3/Lab4/util/: GraphRenderer.cpp  GraphRenderer.h  ImageRenderer.cpp  ImageRenderer.h  UI.cpp  UI.h
(+189 files in other folders)
